🐛(sidebar) fix a visual glitch on small hight screens
On screens with a small height, the "new referral" button was
moving to the right and hidden behind main content. We want to
prevent wrapping in the sidebar and add scrolling so the user can
move through the navbar-nav.

We also added a shadow on the bottom part as an affordance to let
the user know there is more content to scroll through.

--- a/src/frontend/css/components/nav.css
+++ b/src/frontend/css/components/nav.css
@@ -17,7 +17,7 @@
 }
 
 .navbar {
-  @apply h-screen flex flex-col items-center flex-wrap w-64 pt-4 pb-8 bg-gray-100;
+  @apply h-screen flex flex-col items-center flex-no-wrap w-64 pt-4 pb-8 bg-gray-100;
   left: -16rem;
   box-shadow: inset -1px 0px 0px #d0d5de;
 
